update to article

--- a/_posts/2019-06-19-swift-f1.md
+++ b/_posts/2019-06-19-swift-f1.md
@@ -1,27 +1,34 @@
 ---
 title: SwiftF1
 categories:
-  - f1
-  - swiftui
-  - combine
+  - F1
+  - SwiftUI
+  - Combine
 author_staff_member:
 show_comments: true
 ---
 
-After WWDC 2019 was over and most of the attendees having the 🤯, I was looking to experiment a bit with some of the new technologies that were announced in the conference: SwiftUI & Combine(com·bine).
-Inexperience in both declarative UI & reactive programming just made it even more interesting to me, "This is the future", they all said - so I had a shot!
+After WWDC 2019 was over and most of the attendees having the 🤯, I was looking to experiment a bit with some of the new technologies that were announced in the conference: [SwiftUI](https://developer.apple.com/xcode/swiftui/) & [Combine](https://developer.apple.com/documentation/combine).
+My lack of experience in both declarative UI & reactive programming just made it even more interesting for me, "This is the future", they all said - so I decided to give it a shot.
 
-![Seaside City](https://unsplash.it/960/600?image=590)
+![Formula 1 Logo](https://i.ndtvimg.com/i/2017-11/f1-logo-2018_827x510_81511713381.png)
 
-Being a great fan of Formula 1 and loving UI Design in general got me to the idea of recreating one of the current F1 Widgets - The Leaderboard.
+Being a great fan of Formula 1 and loving UI Design in general led me to the experimenting by recreating one of the current F1 main Widgets - The Leaderboard.
 
-<!-- ## Why should you upsell?
+## What is a Leaderboard?
 
-Upselling is a common practice for service providers that offer different service classes such as airlines (cf. Bohutinsky, 1990). According to “the journal of business and industrial marketing; written collaboratively by Michael J, Sheehan and Paul R, Prabhaker “It is five times more expensive to get a new customer as it is to hold onto a current one.” Selling to a new customer would mean having to start the sales process from the very beginning thus having to establish a new relationship with a different customer. This can be time consuming and often not very effective.
+The Leaderboard is "the scoreboard" of racing sports, by viewing it you get information about the current exact place of every driver participating in the race.
 
-![Landscape](https://unsplash.it/960/600?image=1043)
 
-## The benefits
+![A Real Leaderboard](https://static2.stuff.co.nz/1353282957/361/7969361.jpg)
+
+## The Original
+
+Upselling to a customer that you have already built a rapport with, means that they are more likely to buy from you, listen to your suggestions and opinions and trust you. Selling to the same customer can lead to loyal customers and repeat sales. Upselling brings up the profit that the business makes and the value of the sale. However it is important to understand that although your main objective is to bring up revenue and increase the amount of the sale, a customers experience and their time with you influences future decisions that they make. An upsell can be beneficial to both the seller and the consumer if relevant products are being shown to the customer. For instance, if you had a strict budget of $20,000 for a car, you would not want to be sold a car for twice the amount.
+
+[source](https://en.wikipedia.org/wiki/Upselling): Wikipedia -->
+
+## The App
 
 Upselling to a customer that you have already built a rapport with, means that they are more likely to buy from you, listen to your suggestions and opinions and trust you. Selling to the same customer can lead to loyal customers and repeat sales. Upselling brings up the profit that the business makes and the value of the sale. However it is important to understand that although your main objective is to bring up revenue and increase the amount of the sale, a customers experience and their time with you influences future decisions that they make. An upsell can be beneficial to both the seller and the consumer if relevant products are being shown to the customer. For instance, if you had a strict budget of $20,000 for a car, you would not want to be sold a car for twice the amount.
 
