update to video

--- a/_posts/2019-06-19-swift-f1.md
+++ b/_posts/2019-06-19-swift-f1.md
@@ -9,27 +9,25 @@ show_comments: true
 ---
 
 After WWDC 2019 was over and most of the attendees having the 🤯, I was looking to experiment a bit with some of the new technologies that were announced in the conference: [SwiftUI](https://developer.apple.com/xcode/swiftui/) & [Combine](https://developer.apple.com/documentation/combine).
-My lack of experience in both declarative UI & reactive programming just made it even more interesting for me, "This is the future", they all said - so I decided to give it a shot.
+My lack of experience in both declarative UI & reactive programming just made it even more interesting for me,
+"This is the future", they all said - so I decided to give it a shot.
 
 ![Formula 1 Logo](https://i.ndtvimg.com/i/2017-11/f1-logo-2018_827x510_81511713381.png)
 
-Being a great fan of Formula 1 and loving UI Design in general led me to the experimenting by recreating one of the current F1 main Widgets - The Leaderboard.
+Being a great fan of Formula 1 and loving UI Design led me to choose my experiment - the recreation of one the current F1 TV Widgets - The Leaderboard.
 
 ## What is a Leaderboard?
 
-The Leaderboard is "the scoreboard" of racing sports, by viewing it you get information about the current exact place of every driver participating in the race.
+The Leaderboard is "the scoreboard" of racing sports, which by viewing it you get information about the current place of every participating driver in the race.
 
 
 ![A Real Leaderboard](https://static2.stuff.co.nz/1353282957/361/7969361.jpg)
 
 ## The Original
 
-Upselling to a customer that you have already built a rapport with, means that they are more likely to buy from you, listen to your suggestions and opinions and trust you. Selling to the same customer can lead to loyal customers and repeat sales. Upselling brings up the profit that the business makes and the value of the sale. However it is important to understand that although your main objective is to bring up revenue and increase the amount of the sale, a customers experience and their time with you influences future decisions that they make. An upsell can be beneficial to both the seller and the consumer if relevant products are being shown to the customer. For instance, if you had a strict budget of $20,000 for a car, you would not want to be sold a car for twice the amount.
+<iframe width="480" height="360" src="http://www.youtube.com/embed/WO82PoAczTc" frameborder="0"> </iframe>
 
-[source](https://en.wikipedia.org/wiki/Upselling): Wikipedia -->
 
 ## The App
 
-Upselling to a customer that you have already built a rapport with, means that they are more likely to buy from you, listen to your suggestions and opinions and trust you. Selling to the same customer can lead to loyal customers and repeat sales. Upselling brings up the profit that the business makes and the value of the sale. However it is important to understand that although your main objective is to bring up revenue and increase the amount of the sale, a customers experience and their time with you influences future decisions that they make. An upsell can be beneficial to both the seller and the consumer if relevant products are being shown to the customer. For instance, if you had a strict budget of $20,000 for a car, you would not want to be sold a car for twice the amount.
-
-[source](https://en.wikipedia.org/wiki/Upselling): Wikipedia -->
+<iframe width="480" height="360" src="http://www.youtube.com/embed/WO82PoAczTc" frameborder="0"> </iframe>
